# jax-frc

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FRC_merging_simulation_summary.md  LICENSE  README.md  boundary_condition_guide.md  diffusion_slab.ipynb  electrical_models.md  examples.py  extended_mhd.py  frc_proposal.md  hybrid_kinetic.py  issues.md  next-steps.md  nuclear_burn.md  physics_utils.py  plasma_numerics.md  plasma_physics.md  plasma_properties.md  pyproject.toml  resistive_mhd.py  test_history.csv  test_simulations.py  units.md  validation_guide.md
.claude/: settings.local.json
.github/workflows/: tests.yml
.serena/: project.yml
configs/: example_frc.yaml
docs/: getting-started.md  index.md
docs/analysis/: numerical-methods-glossary.md  numerical-schemes-comparison.md
docs/api/: boundaries.md  core.md  diagnostics.md  index.md  simulation.md  solvers.md  validation.md
docs/audits/: 2026-01-31-test-runtime-audit.md
docs/configurations/: index.md
docs/developer/: adding-models.md  architecture.md  jax-patterns.md
docs/models/: burning-plasma.md  extended-mhd.md  index.md  (+3 more)
examples/: __init__.py  belova_case1_hybrid.yaml  belova_case1_resistive.yaml  belova_comparison.yaml  merging_examples.py  mirror_push_analytic.yaml  staged_acceleration.yaml  translation_mhd_comparison.yaml
jax_frc/: __init__.py  constants.py  input_validation.py  operators.py  physics.py  results.py
notebooks/: _shared.py  cylindrical_shock.ipynb  diffusion_slab.ipynb  frozen_flux.ipynb  magnetic_diffusion.ipynb
scripts/: migrate_old_sims.py  run.py  run_example.py  run_validation.py
tests/: __init__.py  conftest.py  test_agate_loader.py  test_agate_loader_integration.py  test_agate_runner.py  test_agate_snapshots.py  test_alfven_wave.py  test_atomic_coupling.py  test_atomic_rates.py  test_belova_validation.py  test_boundaries.py  test_brio_wu.py  test_brio_wu_shock.py  test_burn_physics.py  test_burning_plasma.py  test_burning_plasma_circuits.py  test_circuit_physics.py  test_circuit_state.py  test_circuit_system.py  test_coils.py  test_comparisons.py  test_configurations.py  test_constrained_transport.py  test_coupled.py  test_coupled_model.py  test_cx_equilibration.py  test_cylindrical_gem.py  test_cylindrical_shock.py  test_cylindrical_vortex.py  test_dedner.py  test_diffusion_3d.py  test_direct_conversion.py  test_divergence_cleaning_3d.py  test_energy.py  test_energy_diagnostics.py  test_energy_integration.py  test_equilibrium_3d.py  test_extended_mhd.py  test_extended_mhd_3d.py  test_external_circuits.py  (+64 more)
validation/: .gitignore  README.md  __init__.py  test_reporting.py
(+252 files in other folders)
