[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-frc"
version = "0.1.0"
description = "JAX-based GPU-accelerated plasma physics simulation for Field-Reversed Configuration research"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["plasma", "physics", "simulation", "jax", "frc", "mhd", "fusion"]
authors = [
    {name = "JAX-FRC Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
cuda = [
    "jax[cuda12]>=0.4.20",
]

[project.urls]
Homepage = "https://github.com/jax-frc/jax-fusion"
Documentation = "https://github.com/jax-frc/jax-fusion#readme"
Repository = "https://github.com/jax-frc/jax-fusion.git"
Issues = "https://github.com/jax-frc/jax-fusion/issues"

[tool.hatch.build.targets.wheel]
packages = ["jax_frc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (running full physics simulations)",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["jax_frc"]
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["jax_frc", "resistive_mhd", "extended_mhd", "hybrid_kinetic", "physics_utils"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
